<resources>
    <string name="app_name">MyClass</string>
    <string name="no">Nomor</string>
    <string name="nama">Nama</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="informasi">Aplikasi ini adalah daftar kru Bajak Laut Topi Jerami.
    digunakan untuk pendataan kru. Fitur yang dimiliki dapat menambah, update, dan hapus data kru topi jerami</string>
    <string name="owner">Created By : Faqih Dzaki D</string>
    <string name="version">Version : 1.1</string>
    <string name="email">Email : faqihdzaki11@gmail.com</string>
</resources>
