<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    android:background="#FFFAF0"
    tools:context=".InputData">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/no"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_create"
        android:layout_alignLeft="@id/textView1"
        android:layout_below="@id/textView1"
        android:inputType="number"
        android:maxLength="10">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editText1"
        android:layout_marginTop="10dp"
        android:text="@string/nama"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_group"
        android:layout_alignLeft="@id/textView2"
        android:layout_below="@id/textView2"
        android:inputType="text"
        android:maxLength="20"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText2"
        android:layout_below="@id/editText2"
        android:layout_marginTop="10dp"
        android:text="@string/ttl"
        android:textStyle="bold"/>
    
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_date_range"
        android:layout_alignLeft="@id/textView3"
        android:layout_below="@id/textView3"
        android:hint="2000-01-18"
        android:inputType="date"/>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText3"
        android:layout_below="@id/editText3"
        android:layout_marginTop="10dp"
        android:text="@string/sex"
        android:textStyle="bold"/>
    
    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView4"
        android:layout_below="@id/textView4"
        android:inputType="text"
        android:maxLength="1"
        android:hint="L atau P"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText4"
        android:layout_below="@id/editText4"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView5"
        android:layout_below="@id/textView5"
        android:maxLength="100"
        android:inputType="text"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_alignRight="@id/editText5"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:drawableLeft="@drawable/ic_save"
        android:text="@string/save"
        android:textStyle="bold"/>

</RelativeLayout>